TEST: separation of tests
Problem
We have some special test, so there is a need for test separation.

Solution
We have a folder "test_candidates" which contains a tests that have no functional support in j2eo yet. We can run them separately from regular tests using "test_candidates.sh".

Note
README.md updated